--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "firebase": "^4.1.3",
     "foundation-sites": "^6.4.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
