--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^4.1.3",
     "foundation-sites": "^6.4.1",
     "react": "^15.6.1",
+    "react-block-ui": "^0.2.6",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
