--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "axios": "^0.16.2",
     "firebase": "^4.1.3",
     "foundation-sites": "^6.4.1",
+    "install": "^0.10.1",
+    "material-design-iconic-font": "^2.2.0",
+    "notie": "^4.3.1",
     "react": "^15.6.1",
     "react-block-ui": "^0.2.6",
     "react-dom": "^15.6.1",
@@ -13,7 +16,8 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
-    "redux-saga": "^0.15.5"
+    "redux-saga": "^0.15.5",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
